--- a/de12/test.html
+++ b/de12/test.html
@@ -2,22 +2,40 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>〇〇のテストページ</title>
+    <title>XBPのページ</title>
     <!-- ⑤スタイルシートの設定をしよう -->
     <!-- h1.htmlからある行をコピペしてくればOK -->
-</head>
+    <link rel="stylesheet" href="css/style.css">
 <body>
     <h1>見出し</h1>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <!-- ①↓に文字を書いてみよう -->
-
+<div>
+    あああああ<br>
+    12345<br>
+    ABCDE
+</div>
          <!-- ②↓に画像（imagesフォルダにあるtest.png）を挿入してみよう -->
-
+画像を表示（３０％）<br>
+<img src="images/testimage.png" width="30%"><br>
+画像を表示（４０％）<br>
+<img src="images/testimage.png" width="40%"><br>
+<img src="images/0_XBlogo.png" width="10%"><br>
          <!-- ③↓に箇条書きをしてみよう -->
-
+<ol>
+    <li>ああああああ</li>
+    <li>いいいいいい</li>
+</ol>
+<ul>
+    <li>あああああ</li>
+    <li>いいいいい</li>
+</ul>
          <!-- ④↓に外部リンクを作ってみよう -->
-
+<a href="index.html">デザイン演習Ⅰ・Ⅱトップページ</a><br>
+<a href="../index.html">XBPトップページ</a><br>
+<a href="https://www.yahoo.co.jp/" target="_blank">Yahoo</a><br>
+<a href="files/test.pdf" target="_blank">pdfファイル</a>
     </div>
 
 </body>
