メッセージ

--- a/de12/index.html
+++ b/de12/index.html
@@ -18,7 +18,10 @@
             <li><a href="test.html" target="_blank">テストページ</a></li>
         </ol>
         <h2>演習ノート一覧</h2>
-
+<lu>
+    <li><a href="1.html" target="_blank">第1回</a></li>
+    <li><a href="2.html" target="_blank">第2回</a></li>
+</lu>
 
 
     
