メッセージ

--- a/de12/2.html
+++ b/de12/2.html
@@ -3,6 +3,7 @@
 <head>
     <title>第1回</title>
     <link rel="stylesheet" href="css/style.css">
+</head>    
     <body>
         <h1>第2回</h1>
         <div>
@@ -21,3 +22,4 @@
 
         </div>
     </body>
+</html>
