--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -12,7 +12,9 @@
     </logotohome>
     <h1>デジタルファブリケーション</h1>
     <h2>演習ノート一覧</h2>
-
+<lu>
+    <li><a href="1.html" target="_blank">第1回(ピンセット)</a></li>
+</lu>
 
 
 
