メッセージ

--- a/digi_fab/5.html
+++ b/digi_fab/5.html
@@ -2,11 +2,11 @@
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
-    <title>第5回（ドキュメンテーション）</title>
+    <title>第5回</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>第5回（ドキュメンテーション）</h1>
+    <h1>第5回</h1>
     <div>
         <h2>テーマ</h2>
         <h3>電車の中で勉強する学生</h3>
