メッセージ

--- a/de12/4.html
+++ b/de12/4.html
@@ -15,12 +15,23 @@
         <h3>観察の結果</h3>
         男女別で観察した結果は、以下の通りです。
         <h4>男性</h4>
-        男性は、合計で331名の観察することができました。
-        一番付けている割合が多かったのは、206人でした。
+        男性は、合計で331名の観察することができました。<br>
+        一番付けている割合が多かったのは、206人でした。<br>
         次に多かったのは、黒のウレタンのマスクを身に付けている人が30人と
-        全体の10％弱を占めていました。
-        また、全体的にシンプルなデザインのマスクを着けている人がほとんどだった。
+        全体の10％弱を占めていました。<br>
+        また、全体的にシンプルなデザインのマスクを着けている人がほとんどだった。<br>
+        <img src="images/44.png" width="40%"><br>
+        <img src="images/45.png" width="40%"><br>
+        <img src="images/46.png" width="40%"><br>
         <h4>女性</h4>
-        女性は、
+        女性は、合計で373人の観察がすることができました。<br>
+        男性に比べて、KF94のマスクをしている人が多かった。<br>
+        <img src="images/41.png" width="40%"><br>
+        <img src="images/42.png" width="40%"><br>
+        <img src="images/43.png" width="40%"><br>
+        <h3>感想</h3>
+        男性と女性のマスクを観察してわっかたことが、普段は男性がどんなマスクをしているか<br>
+        また、女性がどんなマスクをしているのか観察をしてことがなかったので<br>
+        その男女の差が思ったより印象です。
     </diV>
 </body>
