--- a/de12/index.html
+++ b/de12/index.html
@@ -25,6 +25,12 @@
     <li><a href="4.html" target="_blank">第4回</a></li>
     <li><a href="5.html" target="_blank">第5回</a></li>
     <li><a href="6.html" target="_blank">第6回</a></li>
+    <li><a href="7.html" target="_blank">第7回</a></li>
+    <li><a href="8.html" target="_blank">第8回</a></li>
+    <li><a href="9.html" target="_blank">第9回</a></li>
+    <li><a href="10.html" target="_blank">第10回</a></li>
+    <li><a href="11.html" target="_blank">第11回</a></li>
+    <li><a href="12.html" target="_blank">最終課題</a></li>
 </lu>
 
 
