--- a/de34/index.html
+++ b/de34/index.html
@@ -12,6 +12,11 @@
     </logotohome>
     <h1>デザイン演習Ⅲ・Ⅳ</h1>
     <h2>演習ノート一覧</h2>
+    <lu>
+        <li><a href="1.html" target="_blank">第1回</a></li>
+        <li><a href="2.html" target="_blank">第2回</a></li>
+
+    </lu>
 
 
 
