メッセージ

--- a/de34/1.html
+++ b/de34/1.html
@@ -6,6 +6,37 @@
 </head>    
     <body>
         <h1>第1回</h1>
+        <h2>Assignment1</h2>
+        マイコンボードとは、マイコンと出入力回路などを基板に乗せて光や動きを能う買うことができる回路。
+
+        <h3>授業でしたプログラム</h3>
+        <code>
+            <ol style="list-style:decimal-leading-zero outside;in-left:0;padding-left:36px;margin:0;background-color:#EEF;color:#000;">
+            <li style="background-color:#EFF;">void setup() {</li>
+            <li style="background-color:#EEF;">&nbsp;&nbsp;// put your setup code here, to run once:</li>
+            <li style="background-color:#EFF;">&nbsp;&nbsp;Serial.begin(9600);</li>
+            <li style="background-color:#EEF;">pinMode(13,OUTPUT);}</li>
+            <li style="background-color:#EEF;">void loop() {int val=0;</li>
+            <li style="background-color:#EFF;">&nbsp;val=analogRead(1);</li>
+            <li style="background-color:#EEF;">&nbsp;&nbsp;Serial.println(val);</li>
+            <li style="background-color:#EFF;">&nbsp;&nbsp;delay(500);</li>
+            <li style="background-color:#EFF;">&nbsp;&nbsp;if(val&lt;200){</li>
+            <li style="background-color:#EEF;">&nbsp;&nbsp;&nbsp;&nbsp;digitalWrite(13,LOW);}</li>
+            <li style="background-color:#EFF;">&nbsp;&nbsp;&nbsp;&nbsp;else{digitalWrite(13,HIGH);}}</li>
+          
+            </ol></code>
+        暗くなると光るコード
+        <h2>Assignment2</h2>
+        <h3>正の感情</h3>
+        <li>嬉しい</li>
+        <li>楽しい</li>
+        <li>美味しい</li>
+        <li>すっきり</li>
+        <h2>負の感情</h2>
+        <li>悲しい </li>
+        <li>退屈</li>
+        <li>寂しい</li>
+        <li>まずい</li>
         <div>
             
         </div>
