--- a/de34/index.html
+++ b/de34/index.html
@@ -16,6 +16,8 @@
         <li><a href="1.html" target="_blank">第1回</a></li>
         <li><a href="2.html" target="_blank">第2回</a></li>
         <li><a href="3.html" target="_blank">第3回</a></li>
+        <li><a href="8.html" target="_blank">第8回</a></li>
+        <li><a href="10.html" target="_blank">最終発表</a></li>
 
     </lu>
 
